sqldelight-gradle-plugin/src/test/fixtures/syntax-error/src/main/sqlite/com/test/Table.sq
package com.test;

mistyped =
  SELECT *
    FRM  table;
